force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount__c</fullName>
    <label>Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>