force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Auto_Draw_Down__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Auto_Draw_Down__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Draw Down</label>
    <type>Checkbox</type>
</CustomField>