force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Available_Amount__c</fullName>
    <description>Net available money that can be used to pay for obligations</description>
    <formula>MUSW__Paid_Amount__c - MUSW__Used_Amount__c - MUSW__Refunded_Amount__c - MUSW__Transfered_Out_Amount__c + MUSW__Transfered_In_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>