force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Transfered_In_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Transfered_In_Amount__c</fullName>
    <label>Transfered In Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>