force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Unpaid_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Unpaid_Amount__c</fullName>
    <formula>IF((MUSW__Amount__c - MUSW__Paid_Amount__c - MUSW__Transfered_In_Amount__c) &lt; 0, 0, MUSW__Amount__c - MUSW__Paid_Amount__c - MUSW__Transfered_In_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>