force-app/main/default/objects/MUSW__Deposit__c/fields/MUSW__Used_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Used_Amount__c</fullName>
    <description>Portion of Paid Amount that has been allocated towards obligations or refunded</description>
    <label>Used Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>