force-app/main/default/objects/MUSW__Deposit__c/validationRules/MUSW__Cannot_refund_more_than_available_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Cannot_refund_more_than_available_amount</fullName>
    <active>true</active>
    <description>Cannot_refund_more_than_available_amount</description>
    <errorConditionFormula>AND(ISCHANGED(   MUSW__Refunded_Amount__c ), BLANKVALUE(  MUSW__Refunded_Amount__c ,0) - BLANKVALUE(PRIORVALUE(   MUSW__Refunded_Amount__c ),0)  > BLANKVALUE(  PRIORVALUE( MUSW__Available_Amount__c ),0) )</errorConditionFormula>
    <errorDisplayField>MUSW__Refunded_Amount__c</errorDisplayField>
    <errorMessage>Cannot refund more than Available Amount</errorMessage>
</ValidationRule>